# Face-of-the-book

Face_of_the_book/: CMakeLists.txt  conturi.csv  main.cpp
Face_of_the_book/Repository/: Dictionar.h  Lista.h  Node.h
Face_of_the_book/Service/: EvenimentService.cpp  EvenimentService.h  MesajService.cpp  MesajService.h  PrietenieService.cpp  PrietenieService.h  UtilizatorService.cpp  UtilizatorService.h
